updated key information

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Level-up | Responsive coming soon template</title>
+    <title>RICOH THETA x IoT Developers Contest</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -40,6 +40,10 @@
           <!-- countdown start -->
           <div class="lu-countdown row"></div>
           <!-- countdown end -->
+
+          <div class="prizes row">
+            <h2>$45,000 in prizes (*) </h2>
+          </div>
 
           <!-- Newsletter signup start -->
           <div class="lu-newletter">
@@ -91,8 +95,10 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-cubes"></i>
                   </div>
-                  <h3>Rules</h3>
-                  <div class="lu-new-feature-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</div>
+                  <h3>Overview</h3>
+                  <div class="lu-new-feature-text"><a href="http://codetricity.github.io/theta-s/index.html">
+                    Develop</a> your cool application for the <a href="https://theta360.com/en/">
+                      RICOH THETA</a> 360 camera. Connect to sensors, data, and gadgets. </div>
               </div>
             </div>
             <div class="col-md-4">
@@ -100,8 +106,11 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-users"></i>
                   </div>
-                  <h3>Sign Up</h3>
-                  <div class="lu-new-feature-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</div>
+                  <h3><a href="http://contest.theta360.com/index-en.html">Sign Up</a></h3>
+                  <div class="lu-new-feature-text"><a href="http://contest.theta360.com/index-en.html">Free to enter</a>.
+                    Chance to win $45,000(*) in total prize money. Learn from your
+                    peers in the forum.
+                    </div>
               </div>
             </div>
             <div class="col-md-4">
@@ -110,7 +119,13 @@
                     <i class="fa fa-fire"></i>
                   </div>
                   <h3>Tips to Win</h3>
-                  <div class="lu-new-feature-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat.</div>
+                  <div class="lu-new-feature-text">Check out the
+                    <a href="http://theta360.guide/">"
+                    Unofficial Guides for RICOH THETA Developers </a> includes
+                    <a href="http://codetricity.github.io/theta-s/index.html">API Guide</a>,
+                    <a href="http://theta360.guide/community-document/community.html">Media Guide</a>, and
+                    <a href="http://theta360.guide/blog/">Blog</a>.
+                  </div>
               </div>
             </div>
             <!-- <div class="col-md-4">
@@ -186,7 +201,7 @@
     <!-- Contact form section end -->
 
     <footer class="lu-footer">
-      <div class="container text-center">
+      <div class="container text-center"> (*) Actual prize amount is 5 million yen in total.
         &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated
       </div>
     </footer>
