new forms for comments and subscriptions

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
           <!-- Newsletter signup start -->
           <div class="lu-newletter">
-            <h2>Subscribe for contest reminders and updates</h2>
-              <div class="row">
+            <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Subscribe for contest reminders and updates</a></h2>
+              <!-- <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                   <div id="mc_embed_signup" class="lu_singup_form">
                     <form action="//wpbean.us8.list-manage.com/subscribe/post?u=2cc9a71baa6a3fd9656eb0430&amp;id=c62d6fd5f8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -62,8 +62,7 @@
                       </div>
                     </form>
                   </div>
-                  <!--End mc_embed_signup-->
-                </div>
+                </div> -->
               </div>
           </div>
           <!-- Newsletter signup end -->
@@ -164,9 +163,11 @@
     <section class="lu-contact" data-stellar-background-ratio="0.5">
       <div class="lu-overlay">
         <div class="container">
-          <h1 class="lu-section-title text-center">Ask a Question</h1>
+          <h1 class="lu-section-title text-center"><a href="https://docs.google.com/forms/d/1AYGWMSFBdv23vqbMZixZuOTAIru4EW6YSZNopzIq7Fg/viewform">
+            Ask a Question</a>
+          </h1>
 
-          <form role="form" class="lu-contact-form" method="post" action="contact.php">
+          <!-- <form role="form" class="lu-contact-form" method="post" action="contact.php">
             <div class="col-md-6">
               <div class="form-group">
                 <div class="controls">
@@ -193,7 +194,7 @@
               </div>
               <button type="submit" id="submit" class="btn btn-default">Send</button><div id="success" style="color:#fff;"></div>
             </div>
-          </form>
+          </form> -->
 
         </div>
       </div>
