--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <!-- countdown end -->
 
           <div class="prizes row">
-            <h2>$45,000 in prizes (*) </h2>
+            <h2>$45,000 in prizes*</h2>
           </div>
 
           <!-- Newsletter signup start -->
