--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-users"></i>
                   </div>
-                  <h3><a href="http://contest.theta360.com/index-en.html">Sign Up</a></h3>
+                  <h3><a href="http://contest.theta360.com/signup.html">Sign Up</a></h3>
                   <div class="lu-new-feature-text"><a href="http://contest.theta360.com/index-en.html">Free to enter</a>.
-                    Chance to win $45,000(*) in total prize money. Learn from your
+                    Chance to win $45,000* in total prize money. Learn from your
                     peers in the forum.
                     </div>
               </div>
@@ -224,7 +224,7 @@
     <!-- Contact form section end -->
 
     <footer class="lu-footer">
-      <div class="container text-center"> (*) Actual prize amount is 5 million yen in total.
+      <div class="container text-center"> *Actual prize amount is 5 million yen in total.
         <br>
         &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated
       </div>
