--- a/signup.html
+++ b/signup.html
@@ -16,30 +16,12 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+<!--    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
   </head>
   <body>
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
-      <div class="lavel-up-color-overlay">
-        <div class="container text-center">
-
-          <!-- Logo start -->
-          <div class="lu-logo">
-            <img src="img/developer_logo.png">
-          </div>
-          <!-- Logo End -->
-
-          <!-- Main Title start -->
-          <h1 class="lu-title">Sign Up for RICOH THETA X IoT DEVELOPERS CONTEST</h1>
-          <!-- Main title end -->
-
-        </div><!--.col-md-12-->
-      </div><!--.row-->
-    </header>
 <h1>Some helpful Tips and Suggestions</h1>
 The RICOH THETA X IoT DEVELOPERS CONTEST is an exciting opportunity to work on a real IoT app with the most popular 360 degree camera on the market. With a change to win $45,000 in prizes.
 </p>
