--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <div class="lu-new-feature-icon">
                     <i class="fa fa-users"></i>
                   </div>
-                  <h3><a href="http://contest.theta360.com/signup.html">Sign Up</a></h3>
+                  <h3><a href="http://theta360.guide/contest/signup.html">Sign Up</a></h3>
                   <div class="lu-new-feature-text"><a href="http://contest.theta360.com/index-en.html">Free to enter</a>.
                     Chance to win $45,000* in total prize money. Learn from your
                     peers in the forum.
