--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <footer class="lu-footer">
       <div class="container text-center"> *Actual prize amount is 5 million yen in total.
         <br>
-        &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated
+        &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Inc.
       </div>
     </footer>
 
