--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,10 @@
           Here's some tips and tricks for easy signup to the RICOH THETA X IoT DEVELOPERS CONTEST</h1>
 The RICOH THETA X IoT DEVELOPERS CONTEST is a cool opportunity to work on an IoT project with a popular low-cost 360 degree camera with a chance to win $45,000 in prizes. 
 Some of the contest rules are hard to follow, including having the prizes listed in yen. So we've gone through the Sign Up process and simplified it for you.
-</p>
+<ul>
+  <li>When we say "secretariat," we mean just mean "us."
+  </li>
+</ul></p>
 
           <!-- Main title end -->
 
