--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
           <div class="lu-countdown row"></div>
           <!-- countdown end -->
 
+          <div class="countdown California time">
+            <h2>End of "Entry Period"</h2>
+          </div>
+
           <div class="prizes row">
             <h2>$45,000 in prizes*</h2>
           </div>
