--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>RICOH THETA x IoT <br>Developers Contest</title>
+    <title>RICOH THETA x IoT Developers Contest</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -34,7 +34,7 @@
           <!-- Logo End -->
 
           <!-- Main Title start -->
-          <h1 class="lu-title">RICOH THETA X IoT DEVELOPERS CONTEST</h1>
+          <h1 class="lu-title">RICOH THETA X IoT <br>DEVELOPERS CONTEST</br></h1>
           <!-- Main title end -->
 
           <!-- countdown start -->
