--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <!-- Logo End -->
 
           <!-- Main Title start -->
-          <h1 class="lu-title">RICOH THETA X IoT</h1>
-          <h2>DEVELOPERS CONTEST</h2>
+          <font size=18 class="lu-title">RICOH THETA X IoT<br>
+          DEVELOPERS CONTEST</br>
           <!-- Main title end -->
 
           <!-- countdown start -->
