--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           <!-- Logo End -->
 
           <!-- Main Title start -->
-          <font size=18 class="lu-title">RICOH THETA X IoT<br>
-          DEVELOPERS CONTEST</br>
+          <h3 class="lu-title">RICOH THETA X IoT DEVELOPERS CONTEST</h3>
           <!-- Main title end -->
 
           <!-- countdown start -->
