--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
           <h3 class="lu-title">RICOH THETA X IoT DEVELOPERS CONTEST</h3>
           <!-- Main title end -->
 
+          <!-- Prize Money start -->
+         <div class="prizes row">
+            <h2>$45,000 in prizes*</h2>
+          </div>
+          <!-- Prize Money end -->
+          
           <!-- countdown start -->
           <div class="lu-countdown row"></div>
           <!-- countdown end -->
@@ -45,10 +51,7 @@
             <h2>End of "Entry Period"</h2>
           </div>
 
-          <div class="prizes row">
-            <h2>$45,000 in prizes*</h2>
-          </div>
-          <!-- Newsletter signup start -->
+           <!-- Newsletter signup start -->
           <div class="lu-newletter">
             <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Subscribe for contest reminders and updates</a></h2>
               <!-- <div class="row">
