--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- countdown end -->
 
           <div class="countdown California time">
-            <h2>End of "Entry Period"</h2>
+            <h2>End of "Entry Period," Wed, August 10, 7:59am, California time</h2>
           </div>
 
            <!-- Newsletter signup start -->
