--- a/signup.html
+++ b/signup.html
@@ -25,8 +25,9 @@
 
     <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
       <div class="lavel-up-color-overlay">
+       <!-- Logo start -->
         <div class="container text-center">
-
+      <!-- Logo End -->
           <!-- Logo start -->
           <div class="lu-logo">
             <img src="img/developer_logo.png">
