--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
     <![endif]-->
 
     <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
-            <img src="img/developer_logo.png">
+            <img src="img/developer_logo_white.png">
           <!-- Logo End -->
           
           <!-- Main Title start -->
