--- a/signup.html
+++ b/signup.html
@@ -29,10 +29,10 @@
 The RICOH THETA X IoT DEVELOPERS CONTEST is a cool opportunity to work on an IoT project with a popular low-cost 360 degree camera with a chance to win $45,000 in prizes. 
 Some of the contest rules are hard to follow, including having the prizes listed in yen. So we've gone through the Sign Up process and simplified it for you.
 <br>
-Main Link for <a href="https://entry.contest.theta360.com/info">summary of rules and signing up</a>
+
 </br>
 <ul>
-  <li></li>
+  <li>Main Link for <a href="https://entry.contest.theta360.com/info">summary of rules and signing up</a></li>
   <li>When we say "secretariat," we mean just mean "us."
   </li>
 </ul></p>
