--- a/signup.html
+++ b/signup.html
@@ -35,8 +35,14 @@ Some of the contest rules are hard to follow, including having the prizes listed
   <li>Main Link for <a href="https://entry.contest.theta360.com/info">summary of rules and signing up</a></li>
   <li>Important Dates</li>
   <ul>
-    <li>Must enter by Aug 10, 7:59am, California time, but...</li>
+    <li>Must register with the contest by Aug 10, 7:59am, California time, but...</li>
     <li>Can submit your final app as late as Aug 31, 7:59am, California time</li>
+    <li>Awards ceremoney is Nov 7</li>
+  </ul>
+  <li>Two types of registration are required</li>
+  <ul>
+    <li><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a> (response can take up to 2 days)</li>
+    <li><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></li>
   </ul>
   <li>When we say "secretariat," we mean just mean "us."
   </li>
