--- a/signup.html
+++ b/signup.html
@@ -97,8 +97,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <!-- Contact form section end -->
 
     <footer class="lu-footer">
-      <div class="container text-center"> *Actual prize amount is 5 million yen in total.
-        <br>
+      <div class="container text-center">
         &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated
       </div>
     </footer>
