--- a/signup.html
+++ b/signup.html
@@ -43,6 +43,9 @@ Some of the contest rules are hard to follow, including having the prizes listed
   <ul>
     <li><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a> (response can take up to 2 days)</li>
     <li><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></li>
+    <ul>
+      <li>You have <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts</a>."</li>
+    </ul>
   </ul>
   <li>When we say "secretariat," we mean just mean "us."
   </li>
