--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,8 @@
     <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
           <!-- Logo End -->
             <img src="img/developer_logo_white.png">
+            <img src="img/developer_logo.png">
+
 
           <!-- Main Title start -->
           <h1 class="lu-title">Sign Up for RICOH THETA X IoT DEVELOPERS CONTEST</h1>
