--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 
 </br>
 <ul>
-  <li>Main Link for <a href="http://contest.theta360.com/index-en.html">summary of rules and signing up</a></li>
+  <li>Main Page for <a href="http://contest.theta360.com/index-en.html">summary of rules and signing up</a></li>
   <li>Important Dates</li>
   <ul>
     <li>Must register with the contest by Aug 10, 7:59am, California time, but...</li>
@@ -47,9 +47,52 @@ Some of the contest rules are hard to follow, including having the prizes listed
       <li>You have <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts</a>."</li>
     </ul>
   </ul>
-  <li>When we say "secretariat," we mean just mean "us."
-  </li>
 </ul></p>
+<ul>
+  <li>Prizes</li>
+  <ul>
+    <li>Grand Total in $45,000 for 9+ different prizes</li>
+    <ul>
+      <li>First prize: $9140 to only one winning entry</li>
+      <li>Section prize: $4570 each to three winning entries</li>
+      <li>The 80th Anniversary special prizes: $2740 each to five winning entries</li>
+      <li>Honorable mention: $910 to as many entries as the judges see fit</li>
+    </ul>
+  </ul>
+</ul>
+<ul>
+  <li>What Can I Submit?</li>
+  <ol>
+    <li>New IoT apps that link RICOH THETA with sensors, and provide data online</li>
+    <li>Gadgets and apps that integrate RICOH THETA</li>
+</ol>
+</ul>
+
+
+What are the Judging Criteria?
+
+Overall, the contest is focused on IoT development that is Innovative. There are three more specific criteria:
+
+Creativity (originality)
+Future-facing (potential, extensibility)
+Ease of use and practical value
+
+
+What Do I need to Submit?
+
+Explanation of an application or a gadget (up to 500 words）
+Photos (up to 5）
+Video (up to 2 mins)
+Simple manual (How to operate applications and the explanation of the expected behavior)
+In the case of App submission, URL where published (Google Play, App Store, Windows Store and /or other websites)
+Types of APIs utilized
+Types of Gadgets utilized
+If it is a physical gadget, you need to send the gadget to RICOH. Gadget submission from the US must be received by Wed, September 7, 2016.
+
+Can I email someone with Questions?
+
+support@contest.theta360.com</li>
+</ul>
 </script>
           <!-- Main title end -->
 
