--- a/signup.html
+++ b/signup.html
@@ -68,14 +68,17 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </ol>
 </ul>
 
-
-What are the Judging Criteria?
-
-Overall, the contest is focused on IoT development that is Innovative. There are three more specific criteria:
-
-Creativity (originality)
-Future-facing (potential, extensibility)
-Ease of use and practical value
+<ul>
+  <li>What are the Judging Criteria?</li>
+  <ul>
+    <li>Overall, the contest is focused on IoT development that is Innovative. There are three more specific criteria:</li>
+    <ul>
+      <li>Creativity (originality)</li>
+      <li>Future-facing (potential, extensibility)</li>
+      <li>Ease of use and practical value</li>
+    </ul>
+  </ul>
+</ul>
 
 
 What Do I need to Submit?
