--- a/signup.html
+++ b/signup.html
@@ -80,22 +80,27 @@ Some of the contest rules are hard to follow, including having the prizes listed
   </ul>
 </ul>
 
-
-What Do I need to Submit?
-
-Explanation of an application or a gadget (up to 500 words）
-Photos (up to 5）
-Video (up to 2 mins)
-Simple manual (How to operate applications and the explanation of the expected behavior)
-In the case of App submission, URL where published (Google Play, App Store, Windows Store and /or other websites)
-Types of APIs utilized
-Types of Gadgets utilized
-If it is a physical gadget, you need to send the gadget to RICOH. Gadget submission from the US must be received by Wed, September 7, 2016.
-
-Can I email someone with Questions?
-
-support@contest.theta360.com</li>
+<ul>
+  <li>What Do I need to Submit?</li>
+  <ul>
+    <li>Explanation of an application or a gadget (up to 500 words)</li>
+    <li>Photos (up to 5</li>
+    <li>Video (up to 2 mins)</li>
+    <li>Simple manual (How to operate applications and the explanation of the expected behavior)</li>
+    <li>URL where published (Google Play, App Store, Windows Store and/or other websites)</li>
+    <li>Types of APIs utilized</li>
+    <li>Types of Gadgets utilized</li>
+    <li>Note: If your submission is a physical gadget, you need to send the gadget to RICOH. Gadget submission from the US must be received by Wed, September 7, 2016.</li>
+  </ul>
 </ul>
+
+<ul>
+  <li>Can I email someone with Questions?</li>
+  <ul>
+    <li><a href="mailto:support@contest.theta360.com">support@contest.theta360.com</a></li>
+  </ul>
+</ul>
+
 </script>
           <!-- Main title end -->
 
