--- a/signup.html
+++ b/signup.html
@@ -52,7 +52,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
   <li>Prizes</li>
   <ul>
     <li>Grand Total in $45,000 for 9+ different prizes</li>
-    <li>Note: Prizes are calculated in yen, to the dollar amount will vary a little, based on the exchange rate at the time the prizes are announced.</li>
+    <li>Note: Prizes are calculated in yen, so the dollar amount is rough, based on the exchange rate at the time the prizes are announced.</li>
     <ul>
       <li>First prize: $9140 to only one winning entry</li>
       <li>Section prize: $4570 each to three winning entries</li>
