--- a/signup.html
+++ b/signup.html
@@ -24,8 +24,8 @@
             <img src="img/developer_logo_white.png">
 
           <!-- Main Title start -->
-          <h1 class="lu-title">Sign Up for RICOH THETA X IoT DEVELOPERS CONTEST</h1>
-<h2>Here's some tips and tricks for easy signup to the contest</h2>
+          <h1 class="lu-title">How To Sign Up for the RICOH THETA X IoT DEVELOPERS CONTEST</h1>
+<h2>Unofficial Tips and Tricks for easy signup to the contest</h2>
 The "RICOH THETA X IoT DEVELOPERS CONTEST" is a cool opportunity to work on an IoT project incorporating RICOH's fun, low-cost 360 degree camera with a chance to win $45,000 in prizes. 
 Some of the contest rules are hard to follow, including having the prizes listed in yen. So we've gone through the Sign Up process and simplified it for you. This is very unofficial but hopefully useful.
 
