--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <!-- countdown end -->
 
           <div class="countdown California time">
-            <h2>End of "Entry Period," Wed, August 10, 7:59am, California time</h2>
+            <h2>Must register by Wed, August 10, 7:59am, California time</h2>
+            <h2>Must submit your app or gadget by August 31, 7:59am, California time</h2>
           </div>
 
            <!-- Newsletter signup start -->
