--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <div class="countdown California time">
             <h2>Must register by Wed, August 10, 7:59am, California time</h2>
-            <h2>Must submit your app or gadget by August 31, 7:59am, California time</h2>
+            <h2>Must submit your app or gadget by Wed, August 31, 7:59am, California time</h2>
           </div>
 
            <!-- Newsletter signup start -->
