--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@
 <font style="font-family:verdana;"></font>The "RICOH THETA X IoT DEVELOPERS CONTEST" is a cool opportunity to work on an IoT project incorporating RICOH's fun, low-cost 360 degree camera with a chance to win $45,000 in prizes. 
 Some of the contest rules are hard to follow, including having the prizes listed in yen. So we've gone through the Sign Up process and simplified it for you. This is very unofficial but hopefully useful.
 
-<ul>
+<ul style="font-family:verdana;">
   <li>Main Page for <a href="http://contest.theta360.com/index-en.html">summary of rules and signing up</a></li>
 </ul>
 <ul>
