--- a/signup.html
+++ b/signup.html
@@ -145,8 +145,8 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <!-- Contact form section end -->
 
     <footer class="lu-footer">
-      <div class="container text-center">
-        &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated
+      <div class="container text-center"><font size=3>
+        &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated</font>
       </div>
     </footer>
     
