--- a/signup.html
+++ b/signup.html
@@ -87,7 +87,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
   <li>What Do I need to Submit?</li>
   <ul>
     <li>Explanation of an application or a gadget (up to 500 words)</li>
-    <li>Photos (up to 5</li>
+    <li>Photos (up to 5)</li>
     <li>Video (up to 2 mins)</li>
     <li>Simple manual (How to operate applications and the explanation of the expected behavior)</li>
     <li>URL where published (Google Play, App Store, Windows Store and/or other websites)</li>
