added MeetUp group link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h1>$45,000 in prizes*</h1>
           </div>
           <!-- Prize Money end -->
-          
+
           <!-- countdown start -->
           <div class="lu-countdown row"></div>
           <!-- countdown end -->
@@ -55,21 +55,6 @@
            <!-- Newsletter signup start -->
           <div class="lu-newletter">
             <h2><a href="https://docs.google.com/forms/d/1tCYf0KppjsyyRblBtDRDkbXH0tgC_LCND73fmBL_tYo/viewform">Subscribe for contest reminders and updates</a></h2>
-              <!-- <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                  <div id="mc_embed_signup" class="lu_singup_form">
-                    <form action="//wpbean.us8.list-manage.com/subscribe/post?u=2cc9a71baa6a3fd9656eb0430&amp;id=c62d6fd5f8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                      <div id="mc_embed_signup_scroll">
-                        <div class="mc-field-group input-group input-group-lg">
-                          <input type="email" value="" name="EMAIL" class="required form-control" id="mce-EMAIL" placeholder="Your Email" required>
-                          <span class="input-group-btn">
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">
-                          </span>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div> -->
               </div>
           </div>
           <!-- Newsletter signup end -->
@@ -179,8 +164,11 @@
           <a href="http://codetricity.github.io/theta-s/index.html#_javascript">
             Using the RICOH THETA API with JavaScript and Node.js</a>
             <br>
-          <a href"http://codetricity.github.io/theta-s/index.html#_raspberry_pi">
+          <a href="http://codetricity.github.io/theta-s/index.html#_raspberry_pi">
             Accessing RICOH THETA API from Raspberry Pi with Python</a>
+            <br>
+          <a href="http://www.meetup.com/RICOH-THETA-Developers-SF-Bay-Area/">
+            RICOH THETA Developers SF Bay Area Group Site</a>
             <br>
           RICOH Cloud API Walkthrough (Planned for end of April)
         </div>
