--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
   </ul>
 </ul>
 <ul>
-  <li>Two types of registration are required</li>
+  <li>Two types of registration</li>
   <ul>
     <li><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a> (response can take up to 2 days)</li>
     <li><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></li>
