--- a/signup.html
+++ b/signup.html
@@ -40,16 +40,23 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <li>Awards ceremoney is Nov 7</li>
   </ul>
 </ul>
-<ul>
-  <li>Two types of registration</li>
-  <ul>
-    <li><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a> (response can take up to 2 days)</li>
-    <li><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></li>
-    <ul>
-      <li>You have <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts</a>."</li>
-    </ul>
-  </ul>
-</ul></p>
+
+<h2>Two types of registration</h2>
+<table border="1">
+<tr>
+<td>Type</td>
+<td>Notes</td>
+</tr>
+<tr>
+<td><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a></td>
+<td>Response can take up to 2 days</td>
+</tr>
+<tr>
+  <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></td>
+  <td>You have <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts</a>."</td>
+</tr>
+</table>
+
 <ul>
   <li>Prizes</li>
   <ul>
