--- a/signup.html
+++ b/signup.html
@@ -41,8 +41,8 @@ Some of the contest rules are hard to follow, including having the prizes listed
   </ul>
 </ul>
 
-<h2>Two types of registration</h2>
-<table border="1">
+<h3>Two types of registration</h3>
+<table border="1" width="80%">
 <tr>
 <td>Type</td>
 <td>Notes</td>
@@ -53,7 +53,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </tr>
 <tr>
   <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></td>
-  <td>You have <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts</a>."</td>
+  <td>You have visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts.</td>
 </tr>
 </table>
 
