--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </tr>
 <tr>
   <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></td>
-  <td>You have visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts.</td>
+  <td>You have visit the "Unified Communication System" webpage to create an administrator account for managing multiple contacts. You will get an email to a temporary "RICOH Notes" site to grab your credentials to the API server. Do this WITHIN 3 days, or you'll have to ask again.</td>
 </tr>
 </table>
 
