--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </ul>
 
 <h3>Two types of registration</h3>
-<table border="1" width="60%">
+<table border="1" width="60%" cellpadding="5" cellspacing="5">
 <tr>
 <td>Type</td>
 <td>Notes</td>
